fix(toolbar): Update alignment of the 'x' in the toolbar filter
Update the alignment of the 'x' in the toolbar filter label to be vertically aligned with the span and not the text.

fixes https://github.com/patternfly/patternfly/issues/989

--- a/src/less/toolbar.less
+++ b/src/less/toolbar.less
@@ -184,6 +184,7 @@
     a {
       color: @color-pf-white;
       display: inline-block;
+      vertical-align: middle;
       margin-left: 5px;
     }
   }
